--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -1,173 +1,162 @@
 .BGcolor {
-    background-color: rgba(136, 192, 224, 0.402);
+    background-color: rgba(197, 225, 239, 0.402);
     
 }
 
 /*CSS pa las weather card*/
-.weather-card {
-  margin: 60px auto;
-  height: 740px;
-  width: 450px;
-  background: #fff;
-  box-shadow: 0 1px 38px rgba(0, 0, 0, 0.15), 0 5px 12px rgba(0, 0, 0, 0.25);
-  overflow: hidden;
+.weather-card .card-img-overlay .wrapper {
+    padding: 5px;
+    position: relative;
+    text-align: center;
+    z-index: 1;
 }
 
-.weather-card .top {
-  position: relative;
-  height: 570px;
-  width: 100%;
-  overflow: hidden;
-  
-  background-size: cover;
-  background-position: center center;
-  text-align: center;
+.weather-card .card-img-overlay .wrapper .mynav {
+    height: 20px;
 }
 
-.weather-card .top .wrapper {
-  padding: 30px;
-  position: relative;
-  z-index: 1;
+.weather-card .card-img-overlay .wrapper .mynav .lnr {
+    color: aliceblue;
+    font-size: 20px;
 }
 
-.weather-card .top .wrapper .mynav {
-  height: 20px;
-}
-.weather-card .top .wrapper .mynav .lnr {
-  color: #000000;
-  font-size: 20px;
+.weather-card .card-img-overlay .wrapper .mynav .lnr-chevron-left {
+    display: inline-block;
+    float: left;
 }
 
-.weather-card .top .wrapper .mynav .lnr-chevron-left {
-  display: inline-block;
+.weather-card .card-img-overlay .wrapper .mynav .lnr-cog {
+    display: inline-block;
+    float: right;
 }
 
-.weather-card .top .wrapper .mynav .lnr-cog {
-  display: inline-block;
+.weather-card .card-img-overlay .wrapper .heading {
+    margin-top: 20px;
+    font-size: 35px;
+    font-weight: 400;
+    color: aliceblue;
 }
 
-.weather-card .top .wrapper .heading {
-  margin-top: 20px;
-  font-size: 35px;
-  font-weight: 400;
-  color: #363434;
+.weather-card .card-img-overlay .wrapper .location {
+    margin-top: 20px;
+    font-size: 21px;
+    font-weight: 400;
+    color: aliceblue;
 }
 
-.weather-card .top .wrapper .location {
-  margin-top: 20px;
-  font-size: 21px;
-  font-weight: 400;
-  color: #363434;
+.weather-card .card-img-overlay .wrapper .temp {
+    margin-top: 20px;
 }
 
-.weather-card .top .wrapper .temp {
-  margin-top: 20px;
+.weather-card .card-img-overlay .wrapper .temp a {
+    text-decoration: none;
+    color: aliceblue;
 }
 
-.weather-card .top .wrapper .temp a {
-  text-decoration: none;
-  color: #363434;
+.weather-card .card-img-overlay .wrapper .temp .temp-type {
+    font-size: 85px;
 }
 
-.weather-card .top .wrapper .temp a .temp-type {
-  font-size: 85px;
+.weather-card .card-img-overlay .wrapper .temp .temp-value {
+    display: inline-block;
+    font-size: 85px;
+    font-weight: 600;
+    color: aliceblue;
 }
 
-.weather-card .top .wrapper .temp .temp-value {
-  display: inline-block;
-  font-size: 85px;
-  font-weight: 600;
-  color: #363434;
+.weather-card .card-img-overlay .wrapper .temp .deg {
+    display: inline-block;
+    font-size: 35px;
+    font-weight: 600;
+    color: aliceblue;
+    vertical-align: top;
+    margin-top: 10px;
 }
 
-.weather-card .top .wrapper .temp .deg {
-  display: inline-block;
-  font-size: 35px;
-  font-weight: 600;
-  color: #363434;
-  vertical-align: top;
-  margin-top: 10px;
+.weather-card .card-img-overlay::after {
+    content: "";
+    height: 100%;
+    width: 100%;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: rgba(40, 40, 40, 0.3);
 }
 
-.weather-card .top:after {
-  content: "";
-  height: 100%;
-  width: 100%;
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background: rgba(0, 0, 0, 0.5);
+.card-body {
+    z-index: 1;
+    background: #ffffff;
 }
 
-.weather-card .bottom {
-  padding: 0 30px;
-  background: #fff;
+.card-img {
+    opacity: 70%;
 }
 
-.weather-card .bottom .wrapper .forecast {
-  overflow: hidden;
-  margin: 0;
-  font-size: 0;
-  padding: 0;
-  padding-top: 20px;
-  max-height: 155px;
+.weather-card .card-body .wrapper .forecast {
+    overflow: hidden;
+    margin: 0;
+    font-size: 0;
+    padding: 0;
+    padding-top: 20px;
+    max-height: 155px;
 }
 
-.weather-card .bottom .wrapper .forecast a {
-  text-decoration: none;
-  color: #000;
+.weather-card .card-body .wrapper .forecast a {
+    text-decoration: none;
+    color: #000;
 }
 
-.weather-card .bottom .wrapper .forecast .go-up {
-  text-align: center;
-  display: block;
-  font-size: 25px;
-  margin-bottom: 10px;
+.weather-card .card-body .wrapper .forecast .go-up {
+    text-align: center;
+    display: block;
+    font-size: 25px;
+    margin-bottom: 5px;
 }
 
-.weather-card .bottom .wrapper .forecast li {
-  display: block;
-  font-size: 25px;
-  font-weight: 400;
-  color: rgba(0, 0, 0, 0.25);
-  line-height: 1em;
-  margin-bottom: 30px;
+.weather-card .card-body .wrapper .forecast li {
+    display: block;
+    font-size: 25px;
+    font-weight: 400;
+    color: rgba(0, 0, 0, 0.25);
+    line-height: 1em;
+    margin-bottom: 15px;
 }
 
-.weather-card .bottom .wrapper .forecast li .date {
-  display: inline-block;
+.weather-card .card-body .wrapper .forecast li .date {
+    display: inline-block;
 }
 
-.weather-card .bottom .wrapper .forecast li .condition {
-  display: inline-block;
-  vertical-align: middle;
-  font-size: 25px;
+.weather-card .card-body .wrapper .forecast li .condition {
+    display: inline-block;
+    vertical-align: middle;
+    font-size: 25px;
+    float: right;
 }
 
-.weather-card .bottom .wrapper .forecast li .condition .temp {
-  display: inline-block;
-  vertical-align: top;
-  font-family: sans-serif;
-  font-size: 20px;
-  font-weight: 400;
-  padding-top: 2px;
+.weather-card .card-body .wrapper .forecast li .condition .temp {
+    display: inline-block;
+    vertical-align: top;
+    font-family: sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    padding-top: 2px;
 }
 
-.weather-card .bottom .wrapper .forecast li .condition .temp .deg {
-  display: inline-block;
-  font-size: 10px;
-  font-weight: 600;
-  margin-left: 3px;
-  vertical-align: top;
+.weather-card .card-body .wrapper .forecast li .condition .temp .deg {
+    display: inline-block;
+    font-size: 10px;
+    font-weight: 600;
+    margin-left: 3px;
+    vertical-align: top;
 }
 
-.weather-card .bottom .wrapper .forecast li .condition .temp .temp-type {
-  font-size: 20px;
+.weather-card .card-body .wrapper .forecast li .condition .temp .temp-type {
+    font-size: 20px;
 }
 
-.weather-card .bottom .wrapper .forecast li.active {
-  color: rgba(0, 0, 0, 0.8);
+.weather-card .card-body .wrapper .forecast li.active {
+    color: rgba(0, 0, 0, 0.8);
 }
 /*Fin CSS pa las weather card*/
 
@@ -203,7 +192,7 @@
 }
 
 .bannerImage {
-    height: 512px;
+    height: 350px;
     background-position: center;
     background-repeat: no-repeat;
 }
